--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,8 +74,16 @@ figcaption.mask span{
     padding: 16px 20px;
 }   
 
+.service-features ul li {
+    line-height: 28px;
+}
 
-  
+.service-features p {
+  display: none;
+}
+.service-features {
+  padding: 30px 0 50px 30px;
+}
  
 }
 
@@ -156,6 +164,7 @@ px      68    160    252    */
 
 .mobile-device .black{
   left: 0;
+  width: 100%;
 }
 
 .mobile-device .white{
@@ -170,11 +179,19 @@ px      68    160    252    */
 .service-features{
   padding: 40px 0 0 20px;
   width: 100%;
-  top: 60%;
+  top: 46%;
 }
 
 .service-features h3{
   margin-bottom: 10px;
+}
+
+.service-features p{
+  display: none;
+}
+
+.service-features ul li {
+    line-height: 28px;
 }
 
 .portfolio-item{
