--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,7 @@ body > section {
     padding: 0;
     text-align: center;
     overflow: hidden;
-    background-color: #E7EF4A;
+    background-color: #333;
     min-height: 800px;
 }
 
